<resources>
    <string name="app_name">ThecnicalTest-Kumparan</string>
    <string name="colom">:</string>
    <string name="user_name">User\'s Name</string>
    <string name="post_title">Title</string>
    <string name="post_body">Body</string>
    <string name="detail_post">Detail of The Posts</string>
    <string name="company">Company</string>
    <string name="profile_user">Profile User</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="comments">Comments</string>
    <string name="failed_load_data">Failed load data</string>
    <string name="data_is_empty">Data is empty</string>
    <string name="album">Album</string>
</resources>